# rlagent

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cc  utils.cc  utils.h
src/: CMakeLists.txt
src/approximator/: approximator.h  state_aggregation.cc  state_aggregation.h  tile_coding.cc  tile_coding.h
src/environment/: environment.h  flappy_simulator.cc  flappy_simulator.h
src/learner/: learner.h  sarsa.cc  sarsa.h
src/policy/: epsilon_greedy.cc  epsilon_greedy.h  policy.h
